--- a/index.html
+++ b/index.html
@@ -66,4 +66,285 @@
     />
 
   </head>
+  <body>
+
+    
+    <footer class="footer" role="contentinfo" aria-label="Footer">
+      <nav class="container footer__container">
+        <div class="footer__main">
+          <!-- Brand information with region landmark -->
+          <div
+            class="footer__brand"
+            role="region"
+            aria-label="Brand information"
+          >
+            <a href="/" class="logo" aria-label="tuchamba.pe home">
+              <span class="logo__text logo__text--blue">tu</span>
+              <span class="logo__text logo__text--orange">chamba</span>
+              <span class="logo__text logo__text--blue">.pe</span>
+            </a>
+            <p class="footer__description" data-i18n="footer.description">
+              Connecting professionals and clients across various industries.
+              Find the perfect match for your project or service needs.
+            </p>
+            <div class="footer__social">
+              <a
+                href="https://facebook.com/tuchamba"
+                class="footer__social-link"
+                aria-label="Facebook"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  aria-hidden="true"
+                >
+                  <path
+                    d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
+                  ></path>
+                </svg>
+              </a>
+              <a
+                href="https://twitter.com/tuchamba"
+                class="footer__social-link"
+                aria-label="Twitter"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  aria-hidden="true"
+                >
+                  <path
+                    d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"
+                  ></path>
+                </svg>
+              </a>
+              <a
+                href="https://instagram.com/tuchamba"
+                class="footer__social-link"
+                aria-label="Instagram"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  aria-hidden="true"
+                >
+                  <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                  <path
+                    d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
+                  ></path>
+                  <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                </svg>
+              </a>
+              <a
+                href="https://linkedin.com/company/tuchamba"
+                class="footer__social-link"
+                aria-label="LinkedIn"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  aria-hidden="true"
+                >
+                  <path
+                    d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
+                  ></path>
+                  <rect x="2" y="9" width="4" height="12"></rect>
+                  <circle cx="4" cy="4" r="2"></circle>
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <div
+            class="footer__links"
+            role="navigation"
+            aria-label="Footer links"
+          >
+            <div class="footer__column">
+              <h4
+                class="footer__heading"
+                id="platform-links"
+                data-i18n="footer.platform.title"
+              >
+                Platform
+              </h4>
+              <ul
+                class="footer__list"
+                role="list"
+                aria-labelledby="platform-links"
+              >
+                <li class="footer__item">
+                  <a
+                    href="#how-it-works"
+                    class="footer__link"
+                    data-i18n="footer.platform.howItWorks"
+                    >How it Works</a
+                  >
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#pricing"
+                    class="footer__link"
+                    data-i18n="footer.platform.pricing"
+                    >Pricing</a
+                  >
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#services"
+                    class="footer__link"
+                    data-i18n="footer.platform.services"
+                    >Services</a
+                  >
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#testimonials"
+                    class="footer__link"
+                    data-i18n="footer.platform.testimonials"
+                    >Testimonials</a
+                  >
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer__column">
+              <h4
+                class="footer__heading"
+                id="company-links"
+                data-i18n="footer.company.title"
+              >
+                Company
+              </h4>
+              <ul
+                class="footer__list"
+                role="list"
+                aria-labelledby="company-links"
+              >
+                <li class="footer__item">
+                  <a
+                    href="#about"
+                    class="footer__link"
+                    data-i18n="footer.company.about"
+                    >About Us</a
+                  >
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#careers"
+                    class="footer__link"
+                    data-i18n="footer.company.careers"
+                    >Careers</a
+                  >
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#blog"
+                    class="footer__link"
+                    data-i18n="footer.company.blog"
+                    >Blog</a
+                  >
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#contact"
+                    class="footer__link"
+                    data-i18n="footer.company.contact"
+                    >Contact</a
+                  >
+                </li>
+              </ul>
+            </div>
+
+            <div class="footer__column">
+              <h4
+                class="footer__heading"
+                id="legal-links"
+                data-i18n="footer.legal.title"
+              >
+                Legal
+              </h4>
+              <ul
+                class="footer__list"
+                role="list"
+                aria-labelledby="legal-links"
+              >
+                <li class="footer__item">
+                  <a
+                    href="#terms"
+                    class="footer__link"
+                    data-i18n="footer.legal.terms"
+                    >Terms of Service</a
+                  >
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#privacy"
+                    class="footer__link"
+                    data-i18n="footer.legal.privacy"
+                    >Privacy Policy</a
+                  >
+                </li>
+                <li class="footer__item">
+                  <a
+                    href="#cookies"
+                    class="footer__link"
+                    data-i18n="footer.legal.cookies"
+                    >Cookie Policy</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+      <!-- Copyright section with region landmark -->
+      <div
+        class="footer__bottom"
+        role="region"
+        aria-label="Copyright information"
+      >
+        <div class="container footer__bottom-container">
+          <p class="footer__copyright" data-i18n="footer.copyright">
+            © <span id="current-year">2025</span> TuChamba. All rights reserved.
+          </p>
+          <p class="footer__credit" data-i18n="footer.credit">
+            Made with ❤️ in Peru
+          </p>
+        </div>
+      </div>
+    </footer>
+
+    <!-- JavaScript -->
+    <script type="module" src="./src/index.js"></script>
+  </body>
 </html>
