--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         </p>
         <div class="hero__actions">
           <a
-                  href="#signup"
+                  href="https://tuchamba-pe.netlify.app/sign-up"
                   class="button button--primary"
                   data-i18n="hero.buttons.getStarted"
           >Get Started</a
